jar設定変更